--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "/Users/nate/anaconda3/envs/rs-bot/bin/python",
+    "python.pythonPath": "C:\\Users\\jonat\\AppData\\Local\\Programs\\Python\\Python36-32\\python.exe",
     "python.linting.enabled": false
 }
